--- a/Codigo/Proyecto1/pom.xml
+++ b/Codigo/Proyecto1/pom.xml
@@ -11,6 +11,12 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE220</version>
         </dependency>
+        
+        <dependency>
+        <groupId>org.telegram</groupId>
+        <artifactId>telegrambots</artifactId>
+        <version>6.7.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
