--- a/Codigo/Proyecto1/pom.xml
+++ b/Codigo/Proyecto1/pom.xml
@@ -6,6 +6,13 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
