--- a/Codigo/Proyecto1/pom.xml
+++ b/Codigo/Proyecto1/pom.xml
@@ -8,6 +8,12 @@
     <dependencies>
         
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
             <version>2.0.1</version>
